feat(common): FTBQ
feat(common): Kubejs item

feat(common): reuse pickarang

fix(common): smc lucky clover

--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/en_us.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/en_us.json
@@ -443,6 +443,16 @@
     "ftbquests.chapter.create.quest8389324096935365389.description2": "You can also use wool instead of sails.",
     "ftbquests.chapter.create.quest8389324096935365389.task.2087722673603247335.title": "Wool",
     "ftbquests.chapter.create.quest8389324096935365389.title": "Sail!",
+    "ftbquests.chapter.create.quest8409746529353836565.description1": "Logistics Additions provides many features to improve advanced logistics systems.",
+    "ftbquests.chapter.create.quest8409746529353836565.description2": "&aFactory Gauge:&r Adds a setting for the commitment limit. When the number of pending packages exceeds the limit, no more packages are sent.",
+    "ftbquests.chapter.create.quest8409746529353836565.description3": "&aPackage Regex:&r Add &bregex:&r before the address to treat the following content as a regular expression.",
+    "ftbquests.chapter.create.quest8409746529353836565.description4": "&aCash Register:&r Similar to a shop, but allows GUI interaction and can record transaction logs.",
+    "ftbquests.chapter.create.quest8409746529353836565.description5": "&aPacking Machine Accelerator:&r Increases the processing speed of a packager or re-packager in the direction of applied stress. The higher the rotation speed, the faster the processing.",
+    "ftbquests.chapter.create.quest8409746529353836565.description6": "&aPackage Editor:&r Edit package names and install clipboard input rules.",
+    "ftbquests.chapter.create.quest8409746529353836565.description7": "Two lines form a group: the first line is the matching pattern, the second line is the replacement text. The first line’s option box enables case-insensitivity, the second line’s option box stops further rule matching.",
+    "ftbquests.chapter.create.quest8409746529353836565.description8": "Matching patterns can be simple text or regular expressions. Simple text can be plain text or use &b{*}&r as capture groups, referenced in replacement text with &b$1, $2…&r, and &b$0&r is the matched text itself. Regular expressions must start with &bregex:&r.",
+    "ftbquests.chapter.create.quest8409746529353836565.description9": "&aLazy Shaft:&r A transmission system with very low overhead, only calculating at the ends. Flexible lazy shafts can bend by opening sides with a wrench.",
+    "ftbquests.chapter.create.quest8409746529353836565.title": "Logistics Additions",
     "ftbquests.chapter.create.quest8559593903084645620.description1": "Cover your shafts, gears, and belts with casings. Casings are not consumed.",
     "ftbquests.chapter.create.quest8559593903084645620.description2": "Might reduce lag?",
     "ftbquests.chapter.create.quest8559593903084645620.title": "Casing",
@@ -638,7 +648,7 @@
     "ftbquests.chapter.farmers_delight.quest3518203633432534867.description1": "Place organic fertilizer in the world, and after some time it naturally decays into fertile soil.",
     "ftbquests.chapter.farmers_delight.quest3518203633432534867.description2": "Decay speeds up in sunlight or near water. Mushrooms and other catalysts can also accelerate decomposition.",
     "ftbquests.chapter.farmers_delight.quest3518203633432534867.description3": "Crops on rich soil grow as if bone‑mealed, super fast! In darkness, mushrooms planted there will grow into colonies.",
-    "ftbquests.chapter.farmers_delight.quest3518203633432534867.description4": "[INFO] If you can mass‑farm peanuts, growing magic peanuts is a faster way to get fertile soil.",
+    "ftbquests.chapter.farmers_delight.quest3518203633432534867.description4": "[INFO] Harvesting peanuts will get magic peanuts, which when grown transform the dirt below into fertile soil.",
     "ftbquests.chapter.farmers_delight.quest3518203633432534867.title": "Rich Soil",
     "ftbquests.chapter.farmers_delight.quest4255546069497060038.description1": "Hold food in your off‑hand, then right‑click a heat source with the frying pan to heat it.",
     "ftbquests.chapter.farmers_delight.quest4255546069497060038.description2": "You can also place the pan on a heat source and put food directly on it.",
@@ -1048,11 +1058,16 @@
     "ftbquests.chapter.stuff.quest1841627816972971738.description1": "The Enchanting Table is disabled, but you can still get enchantments via other ways.",
     "ftbquests.chapter.stuff.quest1841627816972971738.description2": "Then duplicate them using Industrial Enchanting's printer.",
     "ftbquests.chapter.stuff.quest1841627816972971738.title": "You, can not enchanting!",
+    "ftbquests.chapter.stuff.quest1982458085065233237.description1": "One is used to search for specific biomes, the other is used to search for specific structures.",
+    "ftbquests.chapter.stuff.quest1982458085065233237.title": "Compasses",
     "ftbquests.chapter.stuff.quest2248842970085963579.description1": "@polaristrading",
     "ftbquests.chapter.stuff.quest2248842970085963579.description2": "&aRight-click&r a Market block with the Market Tool to claim it and open its GUI.\n\nBottom-left sets traded items and amounts; top-left is items you receive; right side is the warehouse for incoming stock.",
     "ftbquests.chapter.stuff.quest2248842970085963579.description3": "&aRight-click&r the Market block with the item in hand to trade. You can trade even inside claimed chunks.",
     "ftbquests.chapter.stuff.quest2248842970085963579.description4": "For automated I/O, use Create's Table Cloth and a Blaze Burner as the shopkeeper; this also works inside claimed chunks.",
     "ftbquests.chapter.stuff.quest2248842970085963579.title": "Market \\& Trading",
+    "ftbquests.chapter.stuff.quest3572024816709962910.description1": "@smc",
+    "ftbquests.chapter.stuff.quest3572024816709962910.description2": "A collection of interesting little items.",
+    "ftbquests.chapter.stuff.quest3572024816709962910.title": "Star Meow Craft",
     "ftbquests.chapter.stuff.quest4041839843251703038.description1": "Put a direct image or video URL into a frame or projector to place memes/play videos in-game.",
     "ftbquests.chapter.stuff.quest4041839843251703038.description2": "[INFO] bilibili is supported now, but not in Curseforge version modpack. Youtube is not supported yet.",
     "ftbquests.chapter.stuff.quest4041839843251703038.title": "Waterframe",
@@ -1087,10 +1102,10 @@
     "ftbquests.chapter.stuff.quest5387853890751163486.subtitle": "Kitty, u can have the cheese burger~",
     "ftbquests.chapter.stuff.quest5387853890751163486.title": "Kitty Burger",
     "ftbquests.chapter.stuff.quest5575048988528277607.description1": "The ConstructionWand places multiple blocks at once, lets you place or break blocks in mid‑air.",
-    "ftbquests.chapter.stuff.quest5575048988528277607.description2": "&a[Left Ctrl]+Scroll&r switches placement modes. \n&a[Left Ctrl]+Left‑click&r switches the core, \n&a[Left Ctrl]+Right‑click&r undo.",
-    "ftbquests.chapter.stuff.quest5575048988528277607.description3": "&a[Left CTRL]+Left‑click&r opens the config UI.",
+    "ftbquests.chapter.stuff.quest5575048988528277607.description2": "&a[Left Ctrl]+Scroll&r switches placement modes. \n&a[Left Ctrl]+Left‑click&r switches the core.",
+    "ftbquests.chapter.stuff.quest5575048988528277607.description3": "&a[Left Ctrl]+Right‑click&r opens the config UI.",
     "ftbquests.chapter.stuff.quest5575048988528277607.description4": "Aim at your last modified block and &a[Left CTRL]+Right‑click&r to undo the last place/break.",
-    "ftbquests.chapter.stuff.quest5575048988528277607.description5": "[INFO] In KOTS 5.4.0, the wand supports placing blocks from your backpack.",
+    "ftbquests.chapter.stuff.quest5575048988528277607.description5": "[INFO] In KOTS 5.4.2, the wand supports placing blocks from your backpack or your dimension network.",
     "ftbquests.chapter.stuff.quest5575048988528277607.task.7161601614981324485.title": "Construction Wand",
     "ftbquests.chapter.stuff.quest5575048988528277607.title": "Construction Wand",
     "ftbquests.chapter.stuff.quest5745558525891558936.description1": "&a[SHIFT]+right-click&r to open the camera UI; insert film, then right-click to take a photo.",
@@ -1107,10 +1122,14 @@
     "ftbquests.chapter.stuff.quest5881686626851724597.description8": "- +2 and +4 stack;",
     "ftbquests.chapter.stuff.quest5881686626851724597.description9": "- You can snipe the turn by playing the exact same card.",
     "ftbquests.chapter.stuff.quest5881686626851724597.title": "Mino++",
+    "ftbquests.chapter.stuff.quest6410812296514334373.description1": "The kitchen sink modpack must need kitchen sinks!",
+    "ftbquests.chapter.stuff.quest6410812296514334373.title": "Kitchen Sink?",
     "ftbquests.chapter.stuff.quest7041082676781857080.description1": "Burn discs with the recorder or computer and play them in a Music Player.",
     "ftbquests.chapter.stuff.quest7041082676781857080.description2": "Music Player are fun because they interact with the world.",
     "ftbquests.chapter.stuff.quest730619484876150414.description1": "Use it to light up your town.",
     "ftbquests.chapter.stuff.quest730619484876150414.title": "Kinetic Illuminator",
+    "ftbquests.chapter.stuff.quest7781847682340756984.description1": "When pressing &2[~]&r while mining blocks, chain mining can be triggered. If you want to undo after chain mining, press &2[Left CTRL]+[Z]&r to open the chain undo interface, place the required blocks inside, and you can undo the last chain.",
+    "ftbquests.chapter.stuff.quest7781847682340756984.title": "The Other Side Undid a Chain",
     "ftbquests.chapter.stuff.quest7946882653284881569.description1": "@supplementaries",
     "ftbquests.chapter.stuff.quest7946882653284881569.description2": "A pile of quirky yet useful gadgets.",
     "ftbquests.chapter.stuff.quest7946882653284881569.description3": "Faucet: Who's calling me?",
