--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_cn.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_cn.json
@@ -441,8 +441,18 @@
   "ftbquests.chapter.create.quest8377065966416742284.title": "组装列车",
   "ftbquests.chapter.create.quest8389324096935365389.description1": "你的风车结构至少需要8个风帆才能动，最多可以连接128个风帆，每多8个风帆风车就会+1RPM转速。",
   "ftbquests.chapter.create.quest8389324096935365389.description2": "你也可以用羊毛代替风帆。",
-  "ftbquests.chapter.create.quest8389324096935365389.task.2087722673603247335.title": "Any #minecraft:wool",
+  "ftbquests.chapter.create.quest8389324096935365389.task.2087722673603247335.title": "羊毛",
   "ftbquests.chapter.create.quest8389324096935365389.title": "Sail!",
+  "ftbquests.chapter.create.quest8409746529353836565.description1": "物流附加提供了很多功能以改善高级物流系统。",
+  "ftbquests.chapter.create.quest8409746529353836565.description2": "\u0026a工厂仪表：\u0026r增加了承诺上限的设置，当待处理包裹数超过上限后就不再发包。",
+  "ftbquests.chapter.create.quest8409746529353836565.description3": "\u0026a包裹正则：\u0026r在地址名前加上 \u0026bregex:\u0026r 可以将其后的内容作为正则表达式处理。",
+  "ftbquests.chapter.create.quest8409746529353836565.description4": "\u0026a收银机：\u0026r类似商店，但是可以通过 GUI 交互，还能记录流水。",
+  "ftbquests.chapter.create.quest8409746529353836565.description5": "\u0026a打包机加速器：\u0026r输入应力提升朝向的打包机或理包机的处理速度，转速越大速度越快。",
+  "ftbquests.chapter.create.quest8409746529353836565.description6": "\u0026a包裹编辑器：\u0026r编辑包裹名称，安装剪切板输入规则。",
+  "ftbquests.chapter.create.quest8409746529353836565.description7": "两行为一组，首行为匹配式，次行为替换文本。首行选项框为不区分大小写，次行选项框为停止后续规则匹配。",
+  "ftbquests.chapter.create.quest8409746529353836565.description8": "匹配式可以用简单文本或正则表达式。简单文本可以是纯文本，也可以使用\u0026b{*}\u0026r为捕获组，在替换文本中用\u0026b$1, $2…\u0026r引用，\u0026b$0\u0026r当然是匹配到的文本。正则表达式则在最前面加上\u0026bregex:\u0026r。",
+  "ftbquests.chapter.create.quest8409746529353836565.description9": "\u0026a懒轴：\u0026r一种占用很低的传动系统，只有头尾计算。柔性懒轴可以在六个面用扳手开口实现拐弯。",
+  "ftbquests.chapter.create.quest8409746529353836565.title": "物流附加",
   "ftbquests.chapter.create.quest8559593903084645620.description1": "给你的传动杆、齿轮和传送带套上壳，机壳不会被消耗。",
   "ftbquests.chapter.create.quest8559593903084645620.description2": "或许能减少卡顿？",
   "ftbquests.chapter.create.quest8559593903084645620.title": "套壳",
@@ -638,7 +648,7 @@
   "ftbquests.chapter.farmers_delight.quest3518203633432534867.description1": "将有机肥料放置于世界中，一段时间后有机肥料将会自然降解为沃土。",
   "ftbquests.chapter.farmers_delight.quest3518203633432534867.description2": "有机肥料的降解在日光下和在水附近会被加速。还可以放置蘑菇等催化物来加速分解。",
   "ftbquests.chapter.farmers_delight.quest3518203633432534867.description3": "沃土上面的作物会出现骨粉催熟效果，长得飞快！如果足够暗，种在沃土上的蘑菇会生长为菌落。",
-  "ftbquests.chapter.farmers_delight.quest3518203633432534867.description4": "[INFO]如果你可以大量种植花生，种植魔花生来获取沃土是更快的选择。",
+  "ftbquests.chapter.farmers_delight.quest3518203633432534867.description4": "[INFO]收获花生时有概率获取魔花生，魔花生成长时会将下方的泥土转化为沃土。",
   "ftbquests.chapter.farmers_delight.quest3518203633432534867.title": "沃土",
   "ftbquests.chapter.farmers_delight.quest4255546069497060038.description1": "当副手持有食物时，用煎锅对着热源按住右键即可加热食物。",
   "ftbquests.chapter.farmers_delight.quest4255546069497060038.description2": "也可以将煎锅放在热源上，把食物放置在煎锅上加热。",
@@ -961,14 +971,16 @@
   "ftbquests.chapter.sakura.quest4670309031548709206.description1": "更好的刷子！",
   "ftbquests.chapter.sakura.quest4670309031548709206.title": "嗅探兽毛刷",
   "ftbquests.chapter.sakura.quest5864994101504078406.description1": "成年嗅探兽会定期在苔藓泥巴等一系列方块中嗅探古代种子，不同的群系得到的古代种子不同。",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description2": "白垩玉黍：平原，种植于耕地",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description3": "棱蕉：丛林，种植于泥土",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description4": "姬海棠：森林，种植于普通耕地，正常为灌木，在湿润耕地上骨粉催熟后变为乔木",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description5": "溪竹：河流，种植于水面下一格的泥土",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description6": "瓦斯麦：绯红森林，种植于耕地、灵魂土、灵魂沙",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description7": "诡怨桂：诡异森林，种植于耕地",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description2": "白垩玉黍：平原，种植于耕地。比较普通的作物。",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description3": "棱蕉：丛林，种植于泥土。可以反复收获。",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description4": "姬海棠：森林，种植于普通耕地。正常为灌木，在湿润耕地上骨粉催熟后变为乔木",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description5": "溪竹：河流，种植于水面下一格的泥土。",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description6": "瓦斯麦：绯红森林，种植于耕地、灵魂土、灵魂沙、",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description7": "诡怨桂：诡异森林，种植于耕地。比较普通的作物",
   "ftbquests.chapter.sakura.quest5864994101504078406.description8": "菅米：草甸与山峰群系，种植于普通耕地。这个作物非常高，注意留出足够空间。",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description9": "古苜蓿、火把花、瓶子草：全群系，种植于耕地。",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description9": "冰蛟果：冰刺之地，种植于仙人掌上方。注意不要让它被仙人掌摧毁了。",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description10": "烬烟杆：下界荒地，种植于下界岩。成熟的烬烟杆植株若处于熔岩源中，会转变为烬烟木",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description11": "古苜蓿、火把花、瓶子草：全群系，种植于耕地。比较普通的作物。",
   "ftbquests.chapter.sakura.quest5864994101504078406.title": "古代种子",
   "ftbquests.chapter.sakura.quest6309130633612470407.description1": "魔凝机可以提取出食材的精华。它需要输入青金石作为能量来源。",
   "ftbquests.chapter.sakura.quest6309130633612470407.title": "魔凝机",
@@ -1045,11 +1057,16 @@
   "ftbquests.chapter.stuff.quest1841627816972971738.description1": "附魔台被禁用了，不过你还是可以通过其他方式获得附魔，如村民交易、战利品箱、蜂蜜结晶花等。",
   "ftbquests.chapter.stuff.quest1841627816972971738.description2": "之后使用附魔工业的打印机复制它们。",
   "ftbquests.chapter.stuff.quest1841627816972971738.title": "你不许附魔!",
+  "ftbquests.chapter.stuff.quest1982458085065233237.description1": "一个用于搜索特定群系，另一个用于搜索特定结构。",
+  "ftbquests.chapter.stuff.quest1982458085065233237.title": "罗盘",
   "ftbquests.chapter.stuff.quest2248842970085963579.description1": "@polaristrading",
   "ftbquests.chapter.stuff.quest2248842970085963579.description2": "手持市场工具右键市场方块可以认领，并打开市场方块的界面。左下设置交易的物品与数量，左上的交易得到的物品，右侧是待交易物品的仓库。",
   "ftbquests.chapter.stuff.quest2248842970085963579.description3": "手持物品右键市场方块即可交易，市场方块在领地内也可以交易。",
   "ftbquests.chapter.stuff.quest2248842970085963579.description4": "如果需要自动化输入输出，建议使用机械动力的桌布，并使用烈焰人燃烧室作为店长；这样也可以在领地内交易。",
   "ftbquests.chapter.stuff.quest2248842970085963579.title": "市场 \\\u0026 交易",
+  "ftbquests.chapter.stuff.quest3572024816709962910.description1": "@smc",
+  "ftbquests.chapter.stuff.quest3572024816709962910.description2": "有趣小物品的合集。",
+  "ftbquests.chapter.stuff.quest3572024816709962910.title": "星喵工艺",
   "ftbquests.chapter.stuff.quest4041839843251703038.description1": "在框架或者投影仪填入图片或视频的直链，就可以在游戏内摆放表情包/播放视频了。",
   "ftbquests.chapter.stuff.quest4041839843251703038.description2": "[INFO]现在也支持B站的 bilibili 链接与 b23 链接。",
   "ftbquests.chapter.stuff.quest4041839843251703038.title": "Waterframe",
@@ -1084,11 +1101,12 @@
   "ftbquests.chapter.stuff.quest5387853890751163486.subtitle": "Kitty, u can have the cheese burger~",
   "ftbquests.chapter.stuff.quest5387853890751163486.title": "小猫汉堡",
   "ftbquests.chapter.stuff.quest5575048988528277607.description1": "建筑手杖可以帮助你一次性放置多个方块，在空中放置方块或者摧毁方块。",
-  "ftbquests.chapter.stuff.quest5575048988528277607.description2": "\u0026a[左SHIFT]+滚轮\u0026r可以切换放置的模式。 \u0026a[左SHIFT]+左键\u0026r可以切换核心。",
-  "ftbquests.chapter.stuff.quest5575048988528277607.description3": "\u0026a[左SHIFT]+[左CTRL]+左键\u0026r可以打开配置界面。",
-  "ftbquests.chapter.stuff.quest5575048988528277607.description4": "对着上一次修改的方块\u0026a[左SHIFT]+[左CTRL]+右键\u0026r可以撤回上一次破坏/放置。",
-  "ftbquests.chapter.stuff.quest5575048988528277607.description5": "[INFO]如果你正在游玩 KOTS 5.3.5，手杖支持放置背包内的方块。SHIFT 检测也恢复正常，而非原先的检测蹲下。",
+  "ftbquests.chapter.stuff.quest5575048988528277607.description2": "\u0026a[左CTRL]+滚轮\u0026r可以切换放置的模式。 \u0026a[左CTRL]+左键\u0026r可以切换核心。",
+  "ftbquests.chapter.stuff.quest5575048988528277607.description3": "\u0026a[左CTRL]+右键\u0026r可以打开配置界面。",
+  "ftbquests.chapter.stuff.quest5575048988528277607.description4": "对着上一次修改的方块\u0026a[左CTRL]+右键\u0026r可以撤回上一次破坏/放置。",
+  "ftbquests.chapter.stuff.quest5575048988528277607.description5": "[INFO]如果你正在游玩 KOTS 5.4.2，手杖支持放置背包内或维度网络的方块。",
   "ftbquests.chapter.stuff.quest5575048988528277607.task.7161601614981324485.title": "建筑手杖",
+  "ftbquests.chapter.stuff.quest5575048988528277607.title": "建筑手杖",
   "ftbquests.chapter.stuff.quest5745558525891558936.description1": "潜行右键可以打开相机的界面，放入胶卷后右键就可以拍照。",
   "ftbquests.chapter.stuff.quest5745558525891558936.description2": "胶卷需要使用水瓶或药水冲洗，之后放入暗房中显影。这个流程可以使用机械动力。",
   "ftbquests.chapter.stuff.quest5745558525891558936.title": "照相",
@@ -1103,10 +1121,14 @@
   "ftbquests.chapter.stuff.quest5881686626851724597.description8": "- +2 和 +4 可以叠；",
   "ftbquests.chapter.stuff.quest5881686626851724597.description9": "- 用和上张牌相同的牌可以抢回合；",
   "ftbquests.chapter.stuff.quest5881686626851724597.title": "Mino++",
+  "ftbquests.chapter.stuff.quest6410812296514334373.description1": "水槽包必须要有水槽！",
+  "ftbquests.chapter.stuff.quest6410812296514334373.title": "水槽？",
   "ftbquests.chapter.stuff.quest7041082676781857080.description1": "用刻录机或者电脑获得唱片后放到唱片机里面就可以播放音乐。",
   "ftbquests.chapter.stuff.quest7041082676781857080.description2": "当然如果你在服务器的话可以用 \u00262/music\u0026r 命令点歌，不过唱片机的好处是可以与世界交互，比较有节目效果。",
   "ftbquests.chapter.stuff.quest730619484876150414.description1": "使用它来照亮你的小镇。",
   "ftbquests.chapter.stuff.quest730619484876150414.title": "动能照明器",
+  "ftbquests.chapter.stuff.quest7781847682340756984.description1": "按下\u00262[~]\u0026r时挖掘方块可以连锁挖掘。连锁挖掘后如果想要撤销，可以按下\u00262[左CTRL]+[Z]\u0026r打开连锁撤销界面，放入所需要的方块后即可撤销上一次连锁。",
+  "ftbquests.chapter.stuff.quest7781847682340756984.title": "对方撤回了一个连锁",
   "ftbquests.chapter.stuff.quest7946882653284881569.description1": "@supplementaries",
   "ftbquests.chapter.stuff.quest7946882653284881569.description2": "一堆杂乱但是有用的小玩意。",
   "ftbquests.chapter.stuff.quest7946882653284881569.description3": "水龙头：谁在召唤我？",
