--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_tw.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_tw.json
@@ -441,8 +441,18 @@
   "ftbquests.chapter.create.quest8377065966416742284.title": "組裝列車",
   "ftbquests.chapter.create.quest8389324096935365389.description1": "你的風車結構至少需要8個風帆才能動，最多可以連接128個風帆，每多8個風帆風車就會+1RPM轉速。",
   "ftbquests.chapter.create.quest8389324096935365389.description2": "你也可以用羊毛代替風帆。",
-  "ftbquests.chapter.create.quest8389324096935365389.task.2087722673603247335.title": "Any #minecraft:wool",
+  "ftbquests.chapter.create.quest8389324096935365389.task.2087722673603247335.title": "羊毛",
   "ftbquests.chapter.create.quest8389324096935365389.title": "Sail!",
+  "ftbquests.chapter.create.quest8409746529353836565.description1": "物流附加提供了很多功能以改善高級物流系統。",
+  "ftbquests.chapter.create.quest8409746529353836565.description2": "\u0026a工廠儀表：\u0026r增加了承諾上限的設置，當待處理包裹數超過上限後就不再發包。",
+  "ftbquests.chapter.create.quest8409746529353836565.description3": "\u0026a包裹正則：\u0026r在地址名前加上 \u0026bregex:\u0026r 可以將其後的內容作為正則表達式處理。",
+  "ftbquests.chapter.create.quest8409746529353836565.description4": "\u0026a收銀機：\u0026r類似商店，但是可以通過 GUI 交互，還能記錄流水。",
+  "ftbquests.chapter.create.quest8409746529353836565.description5": "\u0026a打包機加速器：\u0026r輸入應力提升朝向的打包機或理包機的處理速度，轉速越大速度越快。",
+  "ftbquests.chapter.create.quest8409746529353836565.description6": "\u0026a包裹編輯器：\u0026r編輯包裹名稱，安裝剪切板輸入規則。",
+  "ftbquests.chapter.create.quest8409746529353836565.description7": "兩行為一組，首行為匹配式，次行為替換文本。首行選項框為不區分大小寫，次行選項框為停止後續規則匹配。",
+  "ftbquests.chapter.create.quest8409746529353836565.description8": "匹配式可以用簡單文本或正則表達式。簡單文本可以是純文本，也可以使用\u0026b{*}\u0026r為捕獲組，在替換文本中用\u0026b$1, $2…\u0026r引用，\u0026b$0\u0026r當然是匹配到的文本。正則表達式則在最前面加上\u0026bregex:\u0026r。",
+  "ftbquests.chapter.create.quest8409746529353836565.description9": "\u0026a懶軸：\u0026r一種占用很低的傳動系統，只有頭尾計算。柔性懶軸可以在六個面用扳手開口實現轉彎。",
+  "ftbquests.chapter.create.quest8409746529353836565.title": "物流附加",
   "ftbquests.chapter.create.quest8559593903084645620.description1": "給你的傳動桿、齒輪和傳送帶套上殼，機殼不會被消耗。",
   "ftbquests.chapter.create.quest8559593903084645620.description2": "或許能減少卡頓？",
   "ftbquests.chapter.create.quest8559593903084645620.title": "套殼",
@@ -638,7 +648,7 @@
   "ftbquests.chapter.farmers_delight.quest3518203633432534867.description1": "將有機肥料放置於世界中，一段時間後有機肥料將會自然降解為沃土。",
   "ftbquests.chapter.farmers_delight.quest3518203633432534867.description2": "有機肥料的降解在日光下和在水附近會被加速。還可以放置蘑菇等催化物來加速分解。",
   "ftbquests.chapter.farmers_delight.quest3518203633432534867.description3": "沃土上面的作物會出現骨粉催熟效果，長得飛快！如果足夠暗，種在沃土上的蘑菇會生長為菌落。",
-  "ftbquests.chapter.farmers_delight.quest3518203633432534867.description4": "[INFO]如果你可以大量種植花生，種植魔花生來獲取沃土是更快的選擇。",
+  "ftbquests.chapter.farmers_delight.quest3518203633432534867.description4": "[INFO]收穫花生時有機率獲取魔花生，魔花生成長時會將下方的泥土轉化為沃土。",
   "ftbquests.chapter.farmers_delight.quest3518203633432534867.title": "沃土",
   "ftbquests.chapter.farmers_delight.quest4255546069497060038.description1": "當副手持有食物時，用煎鍋對著熱源按住右鍵即可加熱食物。",
   "ftbquests.chapter.farmers_delight.quest4255546069497060038.description2": "也可以將煎鍋放在熱源上，把食物放置在煎鍋上加熱。",
@@ -959,16 +969,18 @@
   "ftbquests.chapter.sakura.quest3313156727693581935.description1": "大概是你能獲得的最好的廚刀。",
   "ftbquests.chapter.sakura.quest3313156727693581935.title": "蛋殼刀",
   "ftbquests.chapter.sakura.quest4670309031548709206.description1": "更好的刷子！",
-  "ftbquests.chapter.sakura.quest4670309031548709206.title": "偵測獸毛刷",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description1": "成年偵測獸會定期在苔蘚泥巴等一系列方塊中偵測古代種子，不同的群繫得到的古代種子不同。",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description2": "白堊玉黍：平原，種植於耕地",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description3": "稜蕉：叢林，種植於泥土",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description4": "姬海棠：森林，種植於普通耕地，正常為灌木，在濕潤耕地上骨粉催熟後變為喬木",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description5": "溪竹：河流，種植於水面下一格的泥土",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description6": "瓦斯麥：緋紅森林，種植於耕地、靈魂土、靈魂沙",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description7": "詭怨桂：詭異森林，種植於耕地",
+  "ftbquests.chapter.sakura.quest4670309031548709206.title": "嗅探獸毛刷",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description1": "成年嗅探獸會定期在苔蘚泥巴等一系列方塊中偵測古代種子，不同的群繫得到的古代種子不同。",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description2": "白堊玉黍：平原，種植於耕地。比較普通的作物。",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description3": "稜蕉：叢林，種植於泥土。可以反覆收穫。",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description4": "姬海棠：森林，種植於普通耕地。正常為灌木，在濕潤耕地上骨粉催熟後變為喬木",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description5": "溪竹：河流，種植於水面下一格的泥土。",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description6": "瓦斯麥：緋紅森林，種植於耕地、靈魂土、靈魂沙、",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description7": "詭怨桂：詭異森林，種植於耕地。比較普通的作物",
   "ftbquests.chapter.sakura.quest5864994101504078406.description8": "菅米：草甸與山峰群系，種植於普通耕地。這個作物非常高，注意留出足夠空間。",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description9": "古苜蓿、火把花、瓶子草：全群系，種植於耕地。",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description9": "冰蛟果：冰刺之地，種植於仙人掌上方。注意不要讓它被仙人掌摧毀了。",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description10": "燼煙杆：下界荒地，種植於下界岩。成熟的燼煙杆植株若處於熔岩源中，會轉變為燼煙木",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description11": "古苜蓿、火把花、瓶子草：全群系，種植於耕地。比較普通的作物。",
   "ftbquests.chapter.sakura.quest5864994101504078406.title": "古代種子",
   "ftbquests.chapter.sakura.quest6309130633612470407.description1": "魔凝機可以提取出食材的精華。它需要輸入青金石作為能量來源。",
   "ftbquests.chapter.sakura.quest6309130633612470407.title": "魔凝機",
@@ -985,10 +997,10 @@
   "ftbquests.chapter.sakura.quest7673550262978790007.description2": "相較於大型的粉碎輪，石磨更容易控制研磨程度，適合食材的加工。",
   "ftbquests.chapter.sakura.quest7673550262978790007.title": "石磨",
   "ftbquests.chapter.sakura.quest822621304777443164.description1": "鴕鳥蛋……？",
-  "ftbquests.chapter.sakura.quest822621304777443164.description2": "偵測獸蛋可以放在苔蘚塊上孵化出偵測獸。",
-  "ftbquests.chapter.sakura.quest822621304777443164.description3": "成年偵測獸會定期在苔蘚泥巴等一系列方塊中偵測古代種子，不同的群繫得到的古代種子不同。",
-  "ftbquests.chapter.sakura.quest822621304777443164.description4": "餵食偵測獸榴槤可以使其立刻偵測。餵食偵測獸火焰花種子可以繁殖偵測獸。",
-  "ftbquests.chapter.sakura.quest822621304777443164.title": "偵測獸",
+  "ftbquests.chapter.sakura.quest822621304777443164.description2": "嗅探獸蛋可以放在苔蘚塊上孵化出嗅探獸。",
+  "ftbquests.chapter.sakura.quest822621304777443164.description3": "成年嗅探獸會定期在苔蘚泥巴等一系列方塊中偵測古代種子，不同的群繫得到的古代種子不同。",
+  "ftbquests.chapter.sakura.quest822621304777443164.description4": "餵食嗅探獸榴槤可以使其立刻偵測。餵食嗅探獸火焰花種子可以繁殖嗅探獸。",
+  "ftbquests.chapter.sakura.quest822621304777443164.title": "嗅探獸",
   "ftbquests.chapter.sakura.title": "\u0026a崇古清修者",
   "ftbquests.chapter.storage.quest1192363796913686035.description1": "類似末影抽屜，同一玩家同一物品的末影匣子共用同一空間，但是末影匣子可以從背包中吸取物品。",
   "ftbquests.chapter.storage.quest1192363796913686035.description2": "如果你在世界中放了同一物品的末影匣子，它就能幫你把背包內的物品存到你的基地內。",
@@ -1045,11 +1057,16 @@
   "ftbquests.chapter.stuff.quest1841627816972971738.description1": "附魔台被禁用了，不過你還是可以透過其他方式獲得附魔，如村民交易、戰利品箱、蜂蜜結晶花等。",
   "ftbquests.chapter.stuff.quest1841627816972971738.description2": "之後使用附魔工業的印表機複製它們。",
   "ftbquests.chapter.stuff.quest1841627816972971738.title": "你不許附魔!",
+  "ftbquests.chapter.stuff.quest1982458085065233237.description1": "一個用於搜索特定群系，另一個用於搜索特定結構。",
+  "ftbquests.chapter.stuff.quest1982458085065233237.title": "羅盤",
   "ftbquests.chapter.stuff.quest2248842970085963579.description1": "@polaristrading",
   "ftbquests.chapter.stuff.quest2248842970085963579.description2": "手持市場工具右鍵市場方塊可以認領，並打開市場方塊的界面。左下設置交易的物品與數量，左上的交易得到的物品，右側是待交易物品的倉庫。",
   "ftbquests.chapter.stuff.quest2248842970085963579.description3": "手持物品右鍵市場方塊即可交易，市場方塊在領地內也可以交易。",
   "ftbquests.chapter.stuff.quest2248842970085963579.description4": "如果需要自動化輸入輸出，建議使用機械動力的桌布，並使用烈焰人燃燒室作為店長；這樣也可以在領地內交易。",
   "ftbquests.chapter.stuff.quest2248842970085963579.title": "市場 \\\u0026 交易",
+  "ftbquests.chapter.stuff.quest3572024816709962910.description1": "@smc",
+  "ftbquests.chapter.stuff.quest3572024816709962910.description2": "有趣小物品的合集。",
+  "ftbquests.chapter.stuff.quest3572024816709962910.title": "星喵工藝",
   "ftbquests.chapter.stuff.quest4041839843251703038.description1": "在框架或者投影機填入圖片或影片的直鏈，就可以在遊戲內擺放表情包/播放影片了。",
   "ftbquests.chapter.stuff.quest4041839843251703038.description2": "[INFO]現在也支持B站的 bilibili 連結與 b23 連結。",
   "ftbquests.chapter.stuff.quest4041839843251703038.title": "Waterframe",
@@ -1084,11 +1101,12 @@
   "ftbquests.chapter.stuff.quest5387853890751163486.subtitle": "Kitty, u can have the cheese burger~",
   "ftbquests.chapter.stuff.quest5387853890751163486.title": "小貓漢堡",
   "ftbquests.chapter.stuff.quest5575048988528277607.description1": "建築手杖可以幫助你一次性放置多個方塊，在空中放置方塊或者摧毀方塊。",
-  "ftbquests.chapter.stuff.quest5575048988528277607.description2": "\u0026a[左SHIFT]+滾輪\u0026r可以切換放置的模式。 \u0026a[左SHIFT]+左鍵\u0026r可以切換核心。",
-  "ftbquests.chapter.stuff.quest5575048988528277607.description3": "\u0026a[左SHIFT]+[左CTRL]+左鍵\u0026r可以打開配置界面。",
-  "ftbquests.chapter.stuff.quest5575048988528277607.description4": "對著上一次修改的方塊\u0026a[左SHIFT]+[左CTRL]+右鍵\u0026r可以撤回上一次破壞/放置。",
-  "ftbquests.chapter.stuff.quest5575048988528277607.description5": "[INFO]如果你正在遊玩 KOTS 5.3.5，手杖支持放置背包內的方塊。SHIFT 檢測也恢復正常，而非原先的檢測蹲下。",
+  "ftbquests.chapter.stuff.quest5575048988528277607.description2": "\u0026a[左CTRL]+滾輪\u0026r可以切換放置的模式。 \u0026a[左CTRL]+左鍵\u0026r可以切換核心。",
+  "ftbquests.chapter.stuff.quest5575048988528277607.description3": "\u0026a[左CTRL]+右鍵\u0026r可以打開配置界面。",
+  "ftbquests.chapter.stuff.quest5575048988528277607.description4": "對著上一次修改的方塊\u0026a[左CTRL]+右鍵\u0026r可以撤回上一次破壞/放置。",
+  "ftbquests.chapter.stuff.quest5575048988528277607.description5": "[INFO]如果你正在遊玩 KOTS 5.4.2，手杖支持放置背包內或維度網路內的方塊。",
   "ftbquests.chapter.stuff.quest5575048988528277607.task.7161601614981324485.title": "建築手杖",
+  "ftbquests.chapter.stuff.quest5575048988528277607.title": "建築手杖",
   "ftbquests.chapter.stuff.quest5745558525891558936.description1": "潛行右鍵可以打開相機的界面，放入膠捲後右鍵就可以拍照。",
   "ftbquests.chapter.stuff.quest5745558525891558936.description2": "膠捲需要使用水瓶或藥水沖洗，之後放入暗房中顯影。這個流程可以使用機械動力。",
   "ftbquests.chapter.stuff.quest5745558525891558936.title": "照相",
@@ -1103,10 +1121,14 @@
   "ftbquests.chapter.stuff.quest5881686626851724597.description8": "- +2 和 +4 可以疊；",
   "ftbquests.chapter.stuff.quest5881686626851724597.description9": "- 用和上張牌相同的牌可以搶回合；",
   "ftbquests.chapter.stuff.quest5881686626851724597.title": "Mino++",
+  "ftbquests.chapter.stuff.quest6410812296514334373.description1": "水槽包必須要有水槽！",
+  "ftbquests.chapter.stuff.quest6410812296514334373.title": "水槽？",
   "ftbquests.chapter.stuff.quest7041082676781857080.description1": "用燒錄機或者電腦獲得唱片後放到唱片機裡面就可以播放音樂。",
   "ftbquests.chapter.stuff.quest7041082676781857080.description2": "當然如果你在伺服器的話可以用 \u00262/music\u0026r 命令點歌，不過唱片機的好處是可以與世界交互，比較有節目效果。",
   "ftbquests.chapter.stuff.quest730619484876150414.description1": "使用它來照亮你的小鎮。",
   "ftbquests.chapter.stuff.quest730619484876150414.title": "動能照明器",
+  "ftbquests.chapter.stuff.quest7781847682340756984.description1": "按下\u00262[~]\u0026r時挖掘方塊可以連鎖挖掘。連鎖挖掘後如果想要撤銷，可以按下\u00262[左CTRL]+[Z]\u0026r打開連鎖撤銷界面，放入所需要的方塊後即可撤銷上一次連鎖。",
+  "ftbquests.chapter.stuff.quest7781847682340756984.title": "對方撤回了一個連鎖",
   "ftbquests.chapter.stuff.quest7946882653284881569.description1": "@supplementaries",
   "ftbquests.chapter.stuff.quest7946882653284881569.description2": "一堆雜亂但是有用的小東西。",
   "ftbquests.chapter.stuff.quest7946882653284881569.description3": "水龍頭：誰在召喚我？",
@@ -1195,7 +1217,7 @@
   "ftbquests.chapter.youkai.quest1213898240781286635.description1": "拔出來可能會尖叫，在黑森林中偶爾有看到過這種奇怪的作物。",
   "ftbquests.chapter.youkai.quest1213898240781286635.title": "曼德拉草",
   "ftbquests.chapter.youkai.quest1406660928774501491.description1": "大人的飲品。野生咖啡會生成在叢林群系，摘下咖啡果後在砧板上切開就能得到咖啡豆。",
-  "ftbquests.chapter.youkai.quest1406660928774501491.description2": "\u0026a也可以帶著偵測獸在叢林群系中搜索，找到古代咖啡豆以使用。",
+  "ftbquests.chapter.youkai.quest1406660928774501491.description2": "\u0026a也可以帶著嗅探獸在叢林群系中搜索，找到古代咖啡豆以使用。",
   "ftbquests.chapter.youkai.quest1406660928774501491.title": "咖啡豆",
   "ftbquests.chapter.youkai.quest1669821630806266502.description1": "喝遍所有種類的茶，相比你對於茶已經有了獨到的理解。",
   "ftbquests.chapter.youkai.quest1669821630806266502.task.3129348913311220479.title": "飲茶",
