feat(common): compat
feat(client): resourcepack

fix(common): lang

--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/en_us.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/en_us.json
@@ -974,14 +974,16 @@
     "ftbquests.chapter.sakura.quest4670309031548709206.description1": "A better brush!",
     "ftbquests.chapter.sakura.quest4670309031548709206.title": "Sniffer Fur Brush",
     "ftbquests.chapter.sakura.quest5864994101504078406.description1": "Sniffers periodically dig up ancient seeds from mossy mud and other blocks. Different biomes yield different seeds.",
-    "ftbquests.chapter.sakura.quest5864994101504078406.description2": "Evolutcorn Grains: Plains, plant on farmland.",
-    "ftbquests.chapter.sakura.quest5864994101504078406.description3": "Pearlip: Jungle, plant on dirt.",
+    "ftbquests.chapter.sakura.quest5864994101504078406.description2": "Evolutcorn: Plains, plant on farmland. Normal one.",
+    "ftbquests.chapter.sakura.quest5864994101504078406.description3": "Pearlip: Jungle, plant on dirt. Could be harvested repeatedly.",
     "ftbquests.chapter.sakura.quest5864994101504078406.description4": "Himekaido: Forest, plant on dirt farmland. Normally a shrub, but when on moist dirt farmland, bone meal makes it a tree.",
     "ftbquests.chapter.sakura.quest5864994101504078406.description5": "Leisamboo: River, plant on dirt one block below water surface.",
-    "ftbquests.chapter.sakura.quest5864994101504078406.description6": "Kwat Wheat: Crimson Forest, plant on farmland, soul soil, or soul sand.",
-    "ftbquests.chapter.sakura.quest5864994101504078406.description7": "Warped Laurel: Warped Forest, plant on farmland.",
+    "ftbquests.chapter.sakura.quest5864994101504078406.description6": "Kwat Wheat: Crimson Forest, plant on farmland, soul soil, or soul sand. Be careful, don't touch it!",
+    "ftbquests.chapter.sakura.quest5864994101504078406.description7": "Warped Laurel: Warped Forest, plant on farmland. Normal one.",
     "ftbquests.chapter.sakura.quest5864994101504078406.description8": "Travarice: Meadow or Mountain biomes, plant on dirt farmland. This plant grows very tall, so make sure there's enough vertical space.", 
-    "ftbquests.chapter.sakura.quest5864994101504078406.description9": "Alfalfa, Torchflower, Pitcher Plant: All biomes, plant on farmland.",
+    "ftbquests.chapter.sakura.quest5864994101504078406.description9": "Gelpitaya: Ice Spikes, plant above cactus. Be careful not to let it be destroyed by the cactus.",
+    "ftbquests.chapter.sakura.quest5864994101504078406.description10": "A'bush: Nether Wastes, plant on Nether Rock. Mature A'bush plants will turn into A'bush Wood if placed in a lava source.",
+    "ftbquests.chapter.sakura.quest5864994101504078406.description11": "Alfalfa, Torchflower, Pitcher Plant: All biomes, plant on farmland.",
     "ftbquests.chapter.sakura.quest5864994101504078406.title": "Ancient Seeds",
     "ftbquests.chapter.sakura.quest6309130633612470407.description1": "The Enchantal Cooler extracts the essence of ingredients. It requires lapis as an energy source.",
     "ftbquests.chapter.sakura.quest6309130633612470407.title": "Enchantal Cooler",
