--- a/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_tw.json
+++ b/.pakku/client-overrides/kubejs/assets/ftbquestlocalizer/lang/zh_tw.json
@@ -975,11 +975,11 @@
   "ftbquests.chapter.sakura.quest5864994101504078406.description3": "稜蕉：叢林，種植於泥土。可以反覆收穫。",
   "ftbquests.chapter.sakura.quest5864994101504078406.description4": "姬海棠：森林，種植於普通耕地。正常為灌木，在濕潤耕地上骨粉催熟後變為喬木",
   "ftbquests.chapter.sakura.quest5864994101504078406.description5": "溪竹：河流，種植於水面下一格的泥土。",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description6": "瓦斯麥：緋紅森林，種植於耕地、靈魂土、靈魂沙、",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description6": "瓦斯麥：緋紅森林，種植於耕地、靈魂土、靈魂沙。注意不要觸碰它！",
   "ftbquests.chapter.sakura.quest5864994101504078406.description7": "詭怨桂：詭異森林，種植於耕地。比較普通的作物",
   "ftbquests.chapter.sakura.quest5864994101504078406.description8": "菅米：草甸與山峰群系，種植於普通耕地。這個作物非常高，注意留出足夠空間。",
   "ftbquests.chapter.sakura.quest5864994101504078406.description9": "冰蛟果：冰刺之地，種植於仙人掌上方。注意不要讓它被仙人掌摧毀了。",
-  "ftbquests.chapter.sakura.quest5864994101504078406.description10": "燼煙杆：下界荒地，種植於下界岩。成熟的燼煙杆植株若處於熔岩源中，會轉變為燼煙木",
+  "ftbquests.chapter.sakura.quest5864994101504078406.description10": "燼煙杆：下界荒地，種植於下界岩。成熟的燼煙杆植株若處於熔岩源中，會轉變為燼煙木。",
   "ftbquests.chapter.sakura.quest5864994101504078406.description11": "古苜蓿、火把花、瓶子草：全群系，種植於耕地。比較普通的作物。",
   "ftbquests.chapter.sakura.quest5864994101504078406.title": "古代種子",
   "ftbquests.chapter.sakura.quest6309130633612470407.description1": "魔凝機可以提取出食材的精華。它需要輸入青金石作為能量來源。",
